added bootstprat twitter to obsAysen Django

--- a/gui/templates/about.html
+++ b/gui/templates/about.html
@@ -11,41 +11,33 @@ Quiénes Somos | Observatorio Laboral Aysen
 
 {% block content_about %}
 <div id="main">
-
-        <div id="breadcrumbs">
-          <ul>
-            <li><a href="{% url 'gui:home' %}">Inicio</a></li>
-            <li class="sep">/</li>
-            <li>Quiénes Somos »</li>
-          </ul>
-          <div class="clearfix"></div>
-        </div>
-
-        <div class="post">
-
-                                              <div class="fontsize">
-              <ul>
-                <li class="small"><a data-size="10">a</a></li>
-                  <li class="medium current"><a data-size="15">a</a></li>
-                  <li class="large"><a data-size="20">a</a></li>
-              </ul>
-            </div>
-                                    <div class="clearfix"></div>
-
-            <div class="texto">
-
-              <h3 class="title">Quiénes Somos</h3>
-              <div class="contenido">
-                <p>El <strong>Observatorio Nacional</strong> forma parte del <strong>Servicio Nacional de Capacitación y Empleo</strong>, y su <strong>misión</strong> es producir conocimiento sobre las brechas existentes entre oferta y demanda de ocupaciones en el mercado del trabajo, y avanzar hacia la <strong>anticipación de las brechas futuras</strong>. Esto con el objetivo de <strong>mejorar la empleabilidad de los trabajadores y productividad del país</strong>, por medio de proveer información que apoye la pertinencia de la formación, y el vínculo entre vacantes de empleo y buscadores de empleo.</p>
-<p>El <strong>Observatorio Nacional está conformado por una oficina central y una red de 15 observatorios regionales.</strong></p>
-<p>Los usuarios de la información provista por el Observatorio Nacional son instituciones de Gobierno, las Oficinas Municipales de Información Laboral, instituciones educacionales/formativas, trabajadores y empresarios.</p>
-<p>Actualmente los Observatorios de Antofagasta, Coquimbo, Valparaíso, Maule, Ñuble, Bío Bío, La Araucanía y Aysén han iniciado sus funciones. Los Observatorios de Tarapacá, Los Lagos, Los Ríos, Magallanes y Región Metropolitana se encuentran en fase de diseño. El resto de las regiones se incorporarán a finales de 2017.</p>
-<p>El Director de SENCE y los respectivos Directores Regionales del Servicio son los responsables y representantes del proyecto a nivel central y regional. Cada observatorio cuenta con un consejo asesor que integra representes del Estado, sector público, empresarios, trabajadores y académicos.</p>
-              </div>
-            </div>
-                    
-          <div class="clearfix"></div>
-        </div>
-
+  <div id="breadcrumbs">
+    <ul>
+      <li><a href="{% url 'gui:home' %}">Inicio</a></li>
+      <li class="sep">/</li>
+      <li>Quiénes Somos »</li>
+    </ul>
+    <div class="clearfix"></div>
+  </div>
+  <div class="post">
+    <div class="fontsize">
+      <ul>
+        <li class="small"><a data-size="10">a</a></li>
+        <li class="medium current"><a data-size="15">a</a></li>
+        <li class="large"><a data-size="20">a</a></li>
+      </ul>
+    </div>
+    <div class="clearfix"></div>
+    <div class="texto">
+      <h3 class="title">Quiénes Somos</h3>
+      <div class="contenido">
+        <p>El <strong>Observatorio Laboral Aysén</strong> es parte de la red de <strong>Observatorios Laborales</strong> desarrollada por el <strong>Servicio Nacional de Capacitación y Empleo</strong>, SENCE; en conjunto con la <strong>Sociedad de Fomento Fabril</strong>, SOFOFA. </p>
+        <p>La <strong>misión</strong> del observatorio es <strong>producir conocimiento e información</strong> sobre el funcionamiento y caracterización del <strong>mercado de trabajo</strong> y su <strong>dinámica</strong> para la <strong>Región de Aysén</strong>, avanzando hacia la <strong>anticipación de las brechas futuras</strong> de <strong>capital humano</strong>. Esto con el objetivo de <strong>mejorar la empleabilidad</strong> de los trabajadores y <strong>productividad</strong> de la región, mediante la <strong>generación de información</strong> que apoye la pertinencia de la formación, y el vínculo entre vacantes de empleo y buscadores de empleo.</p>
+        <p>Los principales usuarios de la información provista por el Observatorio Laboral Aysén son instituciones de Gobierno, Oficinas Municipales de Información Laboral, instituciones educacionales/formativas, trabajadores y empresarios a nivel regional como nacional. </p>
+        <p>La red de observatorios es coordinada por el Observatorio Laboral Nacional (http://www.observatorionacional.cl). El Director de SENCE y los respectivos Directores Regionales del Servicio son los responsables y representantes del proyecto a nivel central y regional. Cada observatorio cuenta con un consejo asesor que integra representantes del Estado, sector público, empresarios, trabajadores y académicos.</p>
       </div>
+    </div>
+    <div class="clearfix"></div>
+  </div>
+</div>
 {% endblock content_about %}
