--- a/gui/templates/advice.html
+++ b/gui/templates/advice.html
@@ -36,7 +36,27 @@ Consejo Asesor | Observatorio Laboral Aysen
 
 			<h3 class="title">Consejo Asesor</h3>
 			<div class="contenido">
-				<table style="height: 2251px;" width="604">
+              <p>El Consejo Asesor, como órgano superior en la estructura del Observatorio Laboral Aysén, es una instancia en la que estan integrados y representados distintos actores relevantes y representativos a nivel del Gobierno Regional, de las Organizaciones Empresariales y Sindicales de la Región de Aysén.</p>
+              <p>De esta forma se busca dotar al Director del Observatorio Laboral Regional del máximo acompañamiento posible de las instituciones, organizaciones y autoridades, tanto públicas como privadas, que garanticen el posicionamiento, integración y relevancia de las acciones llevadas a cabo en su interior.</p>
+              <p>Para el caso del Observatorio Laboral Aysén, el Consejo Asesor esta integrado por: </p>
+              <ul>
+                <li><strong>César Gómez Berrocal</strong> Director Regional de SENCE Aysén  </li>
+                <li><strong>Manuel Vivar Aguila</strong> Representante del INE Región de Aysén   </li>
+                <li><strong>Claudio Montecinos Angulo</strong> Director CORFO Región de Aysén  </li>
+                <li><strong>Rossana Valderas Almonacid</strong> Seremi del Trabajo y Previsión Social Aysén   </li>
+                <li><strong>Sonia Pardo Martínez</strong> Seremi Desarrollo Social Aysén  </li>
+                <li><strong>Hugo Urrutia Urrutia</strong> Seremi de Educación Aysén </li>
+                <li><strong>Arturo Escobar Valledor</strong> Campus Patagonia UACh  </li>
+                <li><strong>María Marshall Infante</strong> Universidad de Aysén  </li>
+                <li><strong>Cherie Hernández Frei</strong> Inacap Coyhaique  </li>
+                <li><strong>Julio Rossel González</strong> Consejo Regional de Aysén  </li>
+                <li><strong>Andrés Pincheira Stambuk</strong> Multigremial Aysén  </li>
+                <li><strong>Ylsie Wolf Herrera</strong> Federación Gremios Turismo  </li>
+                <li><strong>Maribel Mancilla Bórquez</strong> Salmon Chile  </li>
+                <li><strong>Rúben Leal Pérez</strong> Sindicato Friosur  </li>
+                <li><strong>Jennifer Aguilar Alvarado</strong> Sindicato Hipermas  </li>
+              </ul>
+				<!--<table style="height: 2251px;" width="604">
 					<tbody>
 						<tr>
 							<td>
@@ -133,7 +153,7 @@ Consejo Asesor | Observatorio Laboral Aysen
 							</td>
 						</tr>
 					</tbody>
-				</table>
+				</table>-->
 				<p>&nbsp;</p>
 			</div>
 		</div>
