--- a/gui/templates/home.html
+++ b/gui/templates/home.html
@@ -14,7 +14,7 @@ Observatorio Laboral Aysen
           <div class="wrap">
             <div id="main">
               <div class="stream">
-                <h5 class="titulo-seccion">Bienvenidos al Observatorio Laboral</h5>
+                <h5 class="titulo-seccion">Bienvenidos al Observatorio Laboral para la Región de Aysén</h5>
                 <section class="entry text-gris">
                   <p>El Observatorio Laboral es un espacio para que los trabajadores y trabajadoras del país, estudiantes, empresas e instituciones formadoras puedan encontrar información de la situación productiva y de ocupaciones a nivel nacional y regional.</p>
                 </section>
