--- a/gui/templates/team.html
+++ b/gui/templates/team.html
@@ -12,101 +12,113 @@ Equipo | Observatorio Laboral Aysen
 {% block content_about %}
 <div id="main">
 
-	<div id="breadcrumbs">
-		<ul>
-			<li><a href="{% url 'gui:home' %}">Inicio</a></li>
-			<li class="sep">/</li>
-			<li>Equipo »</li>
-		</ul>
-		<div class="clearfix"></div>
-	</div>
+  <div id="breadcrumbs">
+    <ul>
+      <li><a href="{% url 'gui:home' %}">Inicio</a></li>
+      <li class="sep">/</li>
+      <li>Equipo »</li>
+    </ul>
+    <div class="clearfix"></div>
+  </div>
 
-	<div class="post">
+  <div class="post">
 
-		<div class="fontsize">
-			<ul>
-				<li class="small"><a data-size="10">a</a></li>
-				<li class="medium current"><a data-size="15">a</a></li>
-				<li class="large"><a data-size="20">a</a></li>
-			</ul>
-		</div>
-		<div class="clearfix"></div>
+    <div class="fontsize">
+      <ul>
+        <li class="small"><a data-size="10">a</a></li>
+        <li class="medium current"><a data-size="15">a</a></li>
+        <li class="large"><a data-size="20">a</a></li>
+      </ul>
+    </div>
+    <div class="clearfix"></div>
 
-		<div class="texto">
+    <div class="texto">
 
-			<h3 class="title">Equipo</h3>
-			<div class="contenido">
-				<table class="table">
-					<tbody>
-						<tr>
-							<td width="169"><strong>Macarena Alvarado</strong></td>
-							<td width="450">Coordinadora Nacional</td>
-						</tr>
-						<tr>
-							<td colspan="2">
-								Magister en Economía de la Universidad de Chile y Master en Políticas Públicas de Paris School of Economics. Anteriormente, se desempeñó como Coordinadora de la Unidad de Evaluación de Programas del Ministerio de Educación y como Asesora Económica de la Subsecretaria del Trabajo.</td>
-							</tr>
-							<tr>
-								<td width="169"><strong>Felipe McRostie</strong></td>
-								<td width="450">Encargado área análisis y producción de información</td>
-							</tr>
-							<tr>
-								<td colspan="2">
-									Licenciado en Filosofía y Magíster en Economía de la Universidad de Chile. Anteriormente, se desempeñó como analista de trabajo y previsión social en la División de Políticas Sociales del Ministerio de Desarrollo Social y ha desarrollado estudios en pobreza, desigualdad y mercado laboral.</td>
-								</tr>
-								<tr>
-									<td width="169"><strong>Victoria Paz</strong></td>
-									<td width="450">Encargada área de incidencia y relaciones institucionales</td>
-								</tr>
-								<tr>
-									<td colspan="2">
-										Ingeniero Comercial, Magister en Economía y Regulación de los Servicios Públicos, Magister en Políticas Públicas. Anteriormente se desempeñó como Directora del Centro de Investigación Social de Un Techo para Chile, asesora económica en el Ministerio de Economía y como Jefa de la Unidad de Intermediación Laboral del Ministerio del Trabajo.</td>
-									</tr>
-									<tr>
-										<td width="169"><strong>Josefina Ramos</strong></td>
-										<td width="450">Analista</td>
-									</tr>
-									<tr>
-										<td colspan="2">
-											Economista de la Universidad de Chile, anteriormente se desempeñó en Fundación Sol analizando diversos ámbitos del mercado laboral. Además, ha desarrollado estudios en el área de educación.</td>
-										</tr>
-										<tr>
-											<td width="169"><strong>Felipe Fábrega</strong></td>
-											<td width="450">Analista</td>
-										</tr>
-										<tr>
-											<td colspan="2">
-												Licenciado en Sociología y Magister en Economía Aplicada (c) de la Universidad de Chile.<br />
-												Anteriormente, desempeñó laborales vinculadas a la investigación social y el levantamiento de información en la División de Reinserción Social del Ministerio de Justicia y Derechos Humanos, la Sociedad Chilena de Nefrología y el Instituto Nacional de Estadísticas.<br />
-												Adicionalmente ha sido asistente de investigación en  diversos estudios en el área de educación.
-											</td>
-										</tr>
-										<tr>
-											<td width="169"><strong>Andrea Sandoval</strong></td>
-											<td width="450">Analista</td>
-										</tr>
-										<tr>
-											<td colspan="2">
-												Economista e Ingeniero en Información y Control de Gestión de la Universidad de Chile (Magíster (c) en Economía).<br />
-												Anteriormente se ha desempeñado como practicante en la Fundación Sol. Actualmente está desarrollando una investigación sobre los desajustes por calificación a nivel de ocupación en Chile (tesis) y es profesor part-time de matemáticas en la Universidad de Chile.
-											</td>
-										</tr>
-										<tr>
-											<td width="169"><strong>Ivan Gutierrez</strong></td>
-											<td width="450">Analista</td>
-										</tr>
-										<tr>
-											<td colspan="2">
-												Economista de la Universidad de Chile (Magíster (c) en Economía). Ha sido asistente de investigación en estudios en el área de la estadística, específicamente sobre nuevas técnicas de matching para la evaluación de impacto, nuevas técnicas de imputación y estimación de área pequeña usando la nueva encuesta nacional de empleo (ENE).</td>
-											</tr>
-										</tbody>
-									</table>
-									<p>&nbsp;</p>
-								</div>
-							</div>
+      <h3 class="title">Equipo</h3>
+      <div class="contenido">
+        <table class="table">
+          <tbody>
+            <tr>
+              <td width="300"><strong>Víctor Iduarte Cofré</strong></td>
+              <td width="450">Director de Proyecto </td>
+            </tr>
+            <!--<tr>
+            <td colspan="2">
+            Titulos y experiencia.</td>
+            </tr>-->
+            <tr>
+              <td width="300"><strong>Cristian Mondaca Marino</strong></td>
+              <td width="450">Analista Senior</td>
+            </tr>
+            <!--<tr>
+<td colspan="2">
+Titulos y experiencia.</td>
+</tr>-->
+            <tr>
+              <td width="300"><strong>Ailin Arriagada Millaman</strong></td>
+              <td width="450">Asesor Cuantitativo</td>
+            </tr>
+            <!--<tr>
+<td colspan="2">
+Titulos y experiencia.</td>
+</tr>--><tr>
+            <td width="300"><strong>Jorge Cea Rodriguez</strong></td>
+            <td width="450">Asesor Cualitativo</td>
+            </tr>
+            <!--<tr>
+<td colspan="2">
+Titulos y experiencia.</td>
+</tr>--><tr>
+            <td width="300"><strong>Arturo del Rio Correa</strong></td>
+            <td width="450">Analista Cuantitativo</td>
+            </tr>
+            <!--<tr>
+<td colspan="2">
+Titulos y experiencia.</td>
+</tr>--><tr>
+            <td width="300"><strong>Claudio Herrera Figueroa</strong></td>
+            <td width="450">Analista Cualitativo</td>
+            </tr>
+            <!--<tr>
+<td colspan="2">
+Titulos y experiencia.</td>
+</tr>--><tr>
+            <td width="169"><strong>Christian Lazo Ramírez</strong></td>
+            <td width="450">Asesor en Sistemas de Información</td>
+            </tr>
+            <!--<tr>
+<td colspan="2">
+Titulos y experiencia.</td>
+</tr>--><tr>
+            <td width="300"><strong>Andres Nova Reyes</strong></td>
+            <td width="450">Experto en Diseño Organizacional</td>
+            </tr>
+            <!--<tr>
+<td colspan="2">
+Titulos y experiencia.</td>
+</tr>--><tr>
+            <td width="300"><strong>Felipe Elmes Pehuen</strong></td>
+            <td width="450">Encargado relaciones institucionales y difusión</td>
+            </tr>
+            <!--<tr>
+<td colspan="2">
+Titulos y experiencia.</td>
+</tr>--><tr>
+            <td width="300"><strong>Yohana Aguilar Fernández</strong></td>
+            <td width="450">Secretaria</td>
+            </tr>
+            <!--<tr>
+<td colspan="2">
+Titulos y experiencia.</td>
+</tr>-->
+          </tbody>
+        </table>
+        <p>&nbsp;</p>
+      </div>
+    </div>
 
-							<div class="clearfix"></div>
-						</div>
+    <div class="clearfix"></div>
+  </div>
 
-					</div>
-					{% endblock content_about %}
+</div>
+{% endblock content_about %}
