formated to web alignment

--- a/gui/templates/advice.html
+++ b/gui/templates/advice.html
@@ -39,23 +39,70 @@ Consejo Asesor | Observatorio Laboral Aysen
               <p>El Consejo Asesor, como órgano superior en la estructura del Observatorio Laboral Aysén, es una instancia en la que estan integrados y representados distintos actores relevantes y representativos a nivel del Gobierno Regional, de las Organizaciones Empresariales y Sindicales de la Región de Aysén.</p>
               <p>De esta forma se busca dotar al Director del Observatorio Laboral Regional del máximo acompañamiento posible de las instituciones, organizaciones y autoridades, tanto públicas como privadas, que garanticen el posicionamiento, integración y relevancia de las acciones llevadas a cabo en su interior.</p>
               <p>Para el caso del Observatorio Laboral Aysén, el Consejo Asesor esta integrado por: </p>
-              <ul>
-                <li><strong>César Gómez Berrocal</strong> Director Regional de SENCE Aysén  </li>
-                <li><strong>Manuel Vivar Aguila</strong> Representante del INE Región de Aysén   </li>
-                <li><strong>Claudio Montecinos Angulo</strong> Director CORFO Región de Aysén  </li>
-                <li><strong>Rossana Valderas Almonacid</strong> Seremi del Trabajo y Previsión Social Aysén   </li>
-                <li><strong>Sonia Pardo Martínez</strong> Seremi Desarrollo Social Aysén  </li>
-                <li><strong>Hugo Urrutia Urrutia</strong> Seremi de Educación Aysén </li>
-                <li><strong>Arturo Escobar Valledor</strong> Campus Patagonia UACh  </li>
-                <li><strong>María Marshall Infante</strong> Universidad de Aysén  </li>
-                <li><strong>Cherie Hernández Frei</strong> Inacap Coyhaique  </li>
-                <li><strong>Julio Rossel González</strong> Consejo Regional de Aysén  </li>
-                <li><strong>Andrés Pincheira Stambuk</strong> Multigremial Aysén  </li>
-                <li><strong>Ylsie Wolf Herrera</strong> Federación Gremios Turismo  </li>
-                <li><strong>Maribel Mancilla Bórquez</strong> Salmon Chile  </li>
-                <li><strong>Rúben Leal Pérez</strong> Sindicato Friosur  </li>
-                <li><strong>Jennifer Aguilar Alvarado</strong> Sindicato Hipermas  </li>
-              </ul>
+              <table style="height: 549px;" width="592">
+                <tbody>
+                  <tr>
+                    <td width="169"><strong>César Gómez Berrocal</strong></td>
+                    <td width="450">Director Regional de SENCE Aysén</td>
+                  </tr>
+                  <tr>
+                    <td width="169"><strong>Manuel Vivar Aguila</strong></td>
+                    <td width="450">Representante del INE Región de Aysén.</td>
+                  </tr>
+                  <tr>
+                    <td width="169"><strong>Claudio Montecinos Angulo</strong></td>
+                    <td width="450">Director CORFO Región de Aysén.</td>
+                  </tr>
+                  <tr>
+                    <td width="169"><strong>Rossana Valderas Almonacid</strong></td>
+                    <td width="450">Seremi del Trabajo y Previsión Social Aysén.</td>
+                  </tr>
+                  <tr>
+                    <td width="169"><strong>Sonia Pardo Martínez</strong></td>
+                    <td width="450">Seremi Desarrollo Social Aysén.</td>
+                  </tr>
+                  <tr>
+                    <td width="169"><strong>Hugo Urrutia Urrutia</strong></td>
+                    <td width="450">Seremi de Educación Aysén.</td>
+                  </tr>
+                  <tr>
+                    <td width="169"><strong>Arturo Escobar Valledor</strong></td>
+                    <td width="450">Campus Patagonia UACh.</td>
+                  </tr>
+                  <tr>
+                    <td width="169"><strong>María Marshall Infante</strong></td>
+                    <td width="450">Universidad de Aysén.</td>
+                  </tr>
+                  <tr>
+                    <td width="169"><strong>Cherie Hernández Frei</strong></td>
+                    <td width="450">Inacap Coyhaique.</td>
+                  </tr>
+                  <tr>
+                    <td width="169"><strong>Julio Rossel González</strong></td>
+                    <td width="450">Consejo Regional de Aysén.</td>
+                  </tr>
+                  <tr>
+                    <td width="169"><strong>Andrés Pincheira Stambuk</strong></td>
+                    <td width="450">Multigremial Aysén.</td>
+                  </tr>
+                  <tr>
+                    <td width="169"><strong>Ylsie Wolf Herrera</strong></td>
+                    <td width="450">Federación Gremios Turismo.</td>
+                  </tr>
+                  <tr>
+                    <td width="169"><strong>Maribel Mancilla Bórquez</strong></td>
+                    <td width="450">Salmon Chile.</td>
+                  </tr>
+                  <tr>
+                    <td width="169"><strong>Rúben Leal Pérez</strong></td>
+                    <td width="450">Sindicato Friosur.</td>
+                  </tr>
+                  <tr>
+                    <td width="169"><strong>Jennifer Aguilar Alvarado</strong></td>
+                    <td width="450">Sindicato Hipermas.</td>
+                  </tr>
+                </tbody>
+              </table>
 				<!--<table style="height: 2251px;" width="604">
 					<tbody>
 						<tr>
